codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_session_skillset_overrides_profile.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⎇ auto/my-branch-20260220 · Skillset: rust-dev · ? for shortcuts              "
