codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_shortcuts_shift_and_esc.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                            shift + enter for newline           "
"  @ for file paths                          ctrl + v to paste images            "
"  esc again to edit previous message        ctrl + g to open editor             "
"  ctrl + c to exit                                                              "
"  ctrl + t to view transcript                                                   "
