codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_shortcuts_vertical.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⎇ feature/test                                                                "
"  +10 -3                                                                        "
"  Approval Mode: Agent                                                          "
"  Skillset: clifford                                                            "
"  Skillsets v19.1.1                                                             "
"  ? for shortcuts                                                               "
