codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_vertical_with_segments_disabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⎇ feature/test                                                                "
"  Context: 34.0K (27%)                                                          "
"  Approval Mode: Agent                                                          "
"  ? for shortcuts                                                               "
