codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_approval_mode_agent.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 457
expression: terminal.backend()
---
"  ⎇ feature/test · Approval Mode: Agent · Skillset: clifford · Skillsets v19.1.1"
