codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_approval_mode_full_access.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⎇ main · Approvals: Full Access · ? for shortcuts                             "
