codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_approval_mode_read_only.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⎇ main · Approvals: Read Only · ? for shortcuts                               "
