codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_cached_tokens.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Context 27% (34.0K) · Tokens: 155K total (32.0K cached) · ? for shortcuts     "
