codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_context_no_percent.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Context: 34.0K · Tokens: 20.0K in / 14.0K out · ? for shortcuts               "
