codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_full_nori_info.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⎇ feature/test · +10 -3 · Skillset: clifford · Skillsets v19.1.1 · ? for short"
