codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_git_branch_disabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  +10 -3 · ? for shortcuts                                                      "
