codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__footer__tests__footer_with_large_token_usage.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  1.23M tokens · ? for shortcuts                                                "
